--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/copy"
+        android:icon="@drawable/ic_content_copy"
         android:showAsAction="always"
-        android:title="Copy"
-        android:icon="@drawable/ic_action_content_copy"/>
+        android:title="Copy"/>
 
 </menu>
